<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">droidClicker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="developed">
        Caio Margutti Alves &#xA;
        Carlos Daniel Drury &#xA;
        Remy de Fru
    </string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="clear"></string>

    <!-- Dialog -->
    <string name="dialog_mark">What do you want to mark here?</string>
    <string name="dialog_maps_styles">Which style of maps do you want to use?</string>
    <string name="dialog_trails_options">Which trail are you searching for?</string>

    <!-- Facebook -->
    <string name="app_id">709379462513399</string>
    <string name="login_facebook">Log in with Facebook</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in"><b>Sign in</b> </string>
    <string name="new_to_rex">New to Theseus?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_first_name">Must not contain numbers or special characters</string>
    <string name="error_invalid_last_name">Must not contain numbers or special characters</string>
    <string name="error_invalid_login">Login must be at least 8 characters long</string>
    <string name="error_invalid_password">Password must be at least 8 characters long</string>
    <string name="error_invalid_repassword">The passwords are different</string>
    <string name="error_incorrect_combination">Wrong combination of login and password</string>
    <string name="error_field_required">This field is required</string>

    <!-- Drawer -->
    <string name="first_name">Caio</string>
    <string name="last_name">Alves</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>


    <!-- Invite -->
    <string name="subject">Theseus</string>
    <string name="title_activity_invite">Share using&#8230;</string>
    <string name="url_invite_message">https://sites.google.com/a/datafest.net/globalurbandatafest/projects/trailsystemauburn</string>
    <string name="invite_message">Are you lost? Are you looking for something in your trail? Why do not you try Theseus and find your way! </string>

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>


    <!-- GPS -->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- Profile -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_re_password">Retype your password</string>


    <!-- Camera -->
    <string name="btnPhoto">Take Photo</string>
    <string name="btnUpload">Upload Photo</string>
    <string name="btnVideo">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_feature_list">Features</string>
    <string name="title_feature_detail">Feature Detail</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="example">Example</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_radius">Search radius:</string>
    <string name="invite">Invite</string>
    <string name="album_name">TheseusPhotos</string>

</resources>
